# PinterestBoardDownloader

./: ..gitignore.kate-swp  .env.example  .gitignore  README.md  _create_pin_from_data_patch.py  instructions.md  patch_networkidle.py  pyproject.toml  requirements.txt
pinterest_downloader/: __init__.py  __main__.py  archiver.py  browser_automation.py  browser_automation.py.backup  config.py  downloader.py  main.py  pinterest_client.py  scraper.py
